deploy: 09815478b4b5eb074922a92bcbc186ffc1b1c2a1

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-今非借比&ndash;今天不是來借用你的比喻。形容對創作者表達的不同尋常的尊重。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+今非借比&ndash;今天不是來借用你的比喻。形容對創作者不同尋常的尊重。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 5, 2021</time>
