--- a/index.html
+++ b/index.html
@@ -46,12 +46,29 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-288/>
+【非真實地場】資料(288)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 「厲害了，我的馬！」妹妹大喊。 「我還要買，我還要買！」妹妹說。
+「你還要輸幾次？」哥哥說。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 6, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-287/>
 【非真實地場】資料(287)
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 那人展示了一個神蹟。
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 「厲害了，我的乖！」孫子大喊。
+原來是那人展示了一個神蹟。
 「我還要看，我還要看！」孫子還要看神蹟，對那人喊道。
 「你要看幾個？」那人說。
 「我的乖乖！」爺爺被嚇到了，一下子坐到靠椅上。
@@ -190,21 +207,6 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 巫服巫行&ndash;巫师的衣服，巫师的行为。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 5, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-278/>
-【非真實地場】資料(278)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-今非借比&ndash;今天不是來借用你的比喻。形容對創作者不同尋常的尊重。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 5, 2021</time>
