deploy: f27b7992b46f5ba8d42ca8ee2fb07ee69d609229

--- a/index.html
+++ b/index.html
@@ -51,8 +51,16 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 「我看了，什麼狗屁作品，不懂的就用星號代替，一看就是差學生寫的，居然還說啥。。啥名作」他說。
-「人家這叫印象派」兒子說。 「印象派？是無賴派還差不多」兒子說。 「至少比直接省略的清楚吧」兒子說。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 右右右右右右右右右右右右右右右
+右　右右右右　右
+右 大　右右右　右
+右　右　大　右右右 右　大大大大大大大　右
+右　大　右
+右　大　大　右
+右右右右右大　大右右右右右
+右右右右大　大右右右右
+右右右右右右右右右右右右右右右
+右右右右右右右右右右右右右右右 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 6, 2021</time>
