--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-293/>
+【非真實地場】資料(293)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr;&mldr;
+「喲，全英文嗒。出口啦？」她說。
+「沒什麼大不了的，就做點外貿」他說。 &mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 6, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-292/>
 【非真實地場】資料(292)
 </a>
@@ -56,7 +73,7 @@
 「還是渣男」她說。 「這次怎麼個渣法？」他說。 「就罵那個博導就行了，就當她根本不懂寫作」她說。 「好好」他說著就衝了上去。
 「你這教的什麼詩歌？了解愛情的歷史嗎？你知道最高級的戀愛每天做什麼嗎？你去過最高級的戀人家裡嗎？」他說。 「我小時候看過一些別人寫的東西」女演員說。
 「證據，拿出證據來！」他說。
-她拿出&mldr;&mldr;，遞給他。 「花，我的色彩學老師。花教會了我。。」他讀道。
+她拿出&mldr;&mldr;，遞給他。 「花，我的色彩學老師。花教我。。」他讀道。
 「什麼玩意！寫的像自我介紹一樣，而且。。而且晦澀得很。再說了，這是別人寫的，和你什麼關係？有本事你現場作，現場作一個，像曹草，哦不，曹植那樣的」他說。
 女演員愣了幾秒鐘。
 「愛。。愛情不是個東西，它的專家是流氓」女演員慢慢的說。
@@ -194,21 +211,6 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 力大無富(力大无富)&ndash;力氣大的男人沒有富的。形容男性沉迷於知識甚至偽科學的現象。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 6, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-283/>
-【非真實地場】資料(283)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-不退則進(不退则进)&ndash;不往後退就往前進了。形容下坡路。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 6, 2021</time>
