--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr;&mldr;
-2046 is a 2004 romantic drama film &mldr;&mldr; Kar-wai. &mldr;&mldr; between Hong Kong, France, Italy, China and Germany, &mldr;&mldr; unconsummated affair with Su Li-zhen in 1960s Hong Kong and includes elements of science fiction.
-&mldr;&mldr;
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &ldquo;&mldr;&mldr; 2046 is a 2004 romantic drama film &mldr;&mldr; Kar-wai. &mldr;&mldr; between Hong Kong, France, Italy, China and Germany, &mldr;&mldr; unconsummated affair with Su Li-zhen in 1960s Hong Kong and includes elements of science fiction.
+&mldr;&mldr; &ldquo;-Wi&mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -68,9 +67,9 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &ldquo;&mldr;&mldr;
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr;&mldr;
 「喲，全英文嗒。出口啦？」她說。
-「沒什麼大不了的，就做點外貿」他說。 &mldr;&mldr;"-Wi&mldr;&mldr;
+「沒什麼大不了的，就做點外貿」他說。 &mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
