--- a/index.html
+++ b/index.html
@@ -46,12 +46,44 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-298/>
+【非真實地場】資料(298)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 光芒萬射(光芒万射)&ndash;光芒射向千面萬方。形容光明。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 6, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-297/>
+【非真實地場】資料(297)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr;&mldr;畫面感，複雜的圖片不是必要的&mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 6, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-296/>
 【非真實地場】資料(296)
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr;&mldr;畫面感，複雜的圖片不是必要的&mldr;&mldr;
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr;&mldr;
+「這目標。。很大啊」她說。
+「不大不大，幾十億吧」他說。 &mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -185,44 +217,9 @@
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-288/>
-【非真實地場】資料(288)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 「厲害了，我的馬！」妹妹大喊。 「我還要買，我還要買！」妹妹說。
-「你還要輸幾次？」哥哥說。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 6, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-287/>
-【非真實地場】資料(287)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 「厲害了，我的乖！」孫子大喊。
-原來是那人展示了一個神蹟。
-「我還要看，我還要看！」孫子還要看神蹟，對那人喊道。
-「你要看幾個？」那人說。
-「我的乖乖！」爺爺被嚇到了，一下子坐到靠椅上。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 6, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
 </div>
 <div class=paginator>
-<p>Page 1 of 34</p>
+<p>Page 1 of 35</p>
 <div class=paginator-group>
 <a class="color-link older" href=/page/2/>
 Older<svg width="13" height="9" viewBox="0 0 13 9" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"><g class="color-arrow" fill="#63bda2" fill-rule="nonzero"><polygon points="7.6707477 1.37628835 8.3292523 0.623711653 12.7592994 4.50000282 8.32918951 8.37629079 7.67069049 7.62370921 11.2407006 4.49999718"/><polygon id="Path" points="0 5 0 4 12 4 12 5"/></g></svg>
