--- a/index.html
+++ b/index.html
@@ -46,14 +46,32 @@
 <div class=article-content>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-on-dimension/>
-【非真實地場】
+<a href=https://blog.jinreal.com/posts/uf-on-resolution/>
+【非真實地場】清晰
 </a>
 </h2>
 <div>
-<p>「Backbone is framework」L說。
-「True」D說。
-「骨頭就是架子」A低聲重複著。這意味著，擁有骨頭就有架子。但在今天的世界裡，骨頭和架子顯然不同。</p>
+<p>「3 is framework」W說。
+「Dimension..dimension is framework」N說。
+「3就是架子，維度就是架子」A自言自語。
+但現在有些作品顯然不是那麼有立體感，有多麼明顯？幾秒鐘就能清晰的看出來。A想。</p>
+</div>
+<div class=post-footer>
+<time>November 8, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-on-dimension/>
+【非真實地場】清晰
+</a>
+</h2>
+<div>
+<p>「3 is framework」W說。
+「Dimension..dimension is framework」N說。
+「3就是架子，維度就是架子」A自言自語。
+但現在有些作品顯然不是那麼有立體感，有多麼明顯？幾秒鐘就能清晰的看出來。A想。</p>
 </div>
 <div class=post-footer>
 <time>November 8, 2021</time>
@@ -67,7 +85,7 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &ldquo;&mldr;&mldr; Three.js是一個跨瀏覽器的指令碼，使用JavaScript函式庫或API來在網頁瀏覽器中建立和展示動畫的3D電腦圖形。Three.js使用WebGL。原始碼代管在GitHub。 &mldr;&mldr; &ldquo;-Wi&mldr;&mldr; =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &ldquo;&mldr;&mldr;Three.js是一個跨瀏覽器的指令碼，使用JavaScript函式庫或API來在網頁瀏覽器中建立和展示動畫的3D電腦圖形。Three.js使用WebGL。原始碼代管在GitHub。&mldr;&mldr; &ldquo;-Wi&mldr;&mldr; =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 8, 2021</time>
@@ -191,21 +209,6 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &ldquo;&mldr;&mldr; List of The Smiling, Proud Wanderer characters &mldr;&mldr; Yue Lingshan (岳靈珊; Yuè Língshān) is Yue Buqun and Ning Zhongze&rsquo;s daughter and Linghu Chong&rsquo;s first romantic interest. She falls in love with Lin Pingzhi later and marries him. However, she eventually learns that she is actually a pawn in a struggle for power between her husband and father. Lin Pingzhi kills her after she refuses to follow him to join a blinded Zuo Lengshan in dealing with Yue Buqun.</p>
-</div>
-<div class=post-footer>
-<time>November 7, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-299/>
-【非真實地場】資料(299)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 越站越勇&ndash;越站著越勇敢。形容英勇。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 7, 2021</time>
