--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <p>「3 is framework」W說。
 「Dimension..dimension is framework」N說。
 「3就是架子，維度就是架子」A自言自語。
-但現在有些作品顯然不是那麼有立體感，有多麼明顯？幾秒鐘就能清晰的看出來。A想。</p>
+但現在有些作品顯然不是那麼有立體感，有多明顯？幾秒鐘就能清晰的看出來。A想。</p>
 </div>
 <div class=post-footer>
 <time>November 8, 2021</time>
