--- a/index.html
+++ b/index.html
@@ -46,15 +46,30 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-308/>
+【非真實地場】資料(308)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 翻山越令&ndash;翻過山嶺而無視命令。形容擅自行動。
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 8, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-on-resolution/>
 【非真實地場】清晰
 </a>
 </h2>
 <div>
 <p>「3 is framework」W說。
-「Dimension..dimension is framework」N說。
-「3就是架子，維度就是架子」A自言自語。
-但現在有些作品顯然不是那麼有立體感，有多明顯？幾秒鐘就能清晰的看出來。A想。</p>
+「Dimension, dimension is framework」N說。
+「3就是架子，維度就是架子」D自言自語。
+但現在有些作品顯然不是那麼有立體感，有多明顯？幾秒鐘就能清晰的看出來。D想。</p>
 </div>
 <div class=post-footer>
 <time>November 8, 2021</time>
@@ -195,20 +210,6 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr;&mldr;Eevee(伊布)是第133號寶可夢&mldr;&mldr;能進化成3種寶可夢&mldr;&mldr; =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 7, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-300/>
-【非真實地場】資料(300)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &ldquo;&mldr;&mldr; List of The Smiling, Proud Wanderer characters &mldr;&mldr; Yue Lingshan (岳靈珊; Yuè Língshān) is Yue Buqun and Ning Zhongze&rsquo;s daughter and Linghu Chong&rsquo;s first romantic interest. She falls in love with Lin Pingzhi later and marries him. However, she eventually learns that she is actually a pawn in a struggle for power between her husband and father. Lin Pingzhi kills her after she refuses to follow him to join a blinded Zuo Lengshan in dealing with Yue Buqun.</p>
 </div>
 <div class=post-footer>
 <time>November 7, 2021</time>
