--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=zh-cn>
 <head>
-<meta name=generator content="Hugo 0.89.2">
+<meta name=generator content="Hugo 0.89.4">
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <meta name=viewport content="width=device-width,initial-scale=1">
@@ -44,6 +44,20 @@
 </nav>
 <div id=content class=content-container>
 <div class=article-content>
+<article>
+<h2>
+<a href=https://blog.jinreal.com/posts/uf-material-313/>
+【非真實地場】資料(313)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &ldquo;宋慧教[1][2]（韓語：송혜교／宋慧敎 Song Hye-gyo，1981年11月22日－），韓國女演員。在出道時，中文翻譯根據韓文「교」而將她的名字音譯作宋慧喬，而這個譯名亦被中文媒體沿用至今[3][4][5]。&mldr;&mldr;&rdquo; &ndash;Wi&mldr;&mldr; =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 18, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
 <article>
 <h2>
 <a href=https://blog.jinreal.com/posts/uf-material-312/>
@@ -184,25 +198,6 @@
 「女版唱的是寂寞，我更喜歡女版」他說。
 「聽起來。。有點兒道理」那個女生說。
 「開了！」她說。 &mldr;&mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 7, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-305/>
-【非真實地場】資料(305)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr;&mldr;
-「旋轉。。跳躍。。我」他唱著。
-「這名字有毒」她說。
-「天哪！真有叫這個名字的」他說。
-「既生一號位，何生二號位！女人何必難為女人」他接著說。 &mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
