--- a/index.html
+++ b/index.html
@@ -46,12 +46,26 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-316/>
+【非真實地場】資料(316)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 前途妹卜&ndash;前途是妹妹算出來的。形容家人的預測準確。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 20, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-315/>
 【非真實地場】資料(315)
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 心真口快&ndash;心意真切，藏不住話。形容真誠。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 心真口快&ndash;心意真切，藏不住話。形容熱誠。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 20, 2021</time>
@@ -173,23 +187,6 @@
 「Dimension, dimension is framework」N說。
 「3就是架子，維度就是架子」D自言自語。
 但現在有些作品顯然不是那麼有立體感，有多明顯？幾秒鐘就能清晰的看出來。D想。</p>
-</div>
-<div class=post-footer>
-<time>November 8, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-on-dimension/>
-【非真實地場】清晰
-</a>
-</h2>
-<div>
-<p>「3 is framework」W說。
-「Dimension..dimension is framework」N說。
-「3就是架子，維度就是架子」A自言自語。
-但現在有些作品顯然不是那麼有立體感，有多麼明顯？幾秒鐘就能清晰的看出來。A想。</p>
 </div>
 <div class=post-footer>
 <time>November 8, 2021</time>
