deploy: 99436a48e5e4fad28ddea3d6eb75bcfa369f62b0

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 連篇累讀(连篇累读)&ndash;虽然很累，但是仍然把很多篇稿子连着读。形容敬业。
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 連篇累讀(连篇累读)&ndash;雖然已經很累，但是仍然把很多稿子連著讀。形容敬業。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
