deploy: ea4a4b20e02bb77c894dbe738b1a7f52fef027c7

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 柳暗花暗&ndash;柳樹是暗的，花也是暗的。形容黑暗。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 難心壯志(难心壮志)&ndash;心裡很難，但是有宏偉的志願。形容稱王的決心。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 23, 2021</time>
