deploy: 5132758d0b9e27f82d2eb3d19db395ae03f06041

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <div class=article-content>
 <article>
 <h2>
-<a href=https://blog.jinreal.com/posts/uf-material-341/>
-【非真實地場】資料(341)
+<a href=https://blog.jinreal.com/posts/uf-material-342/>
+Uf Material 342
 </a>
 </h2>
 <div>
@@ -63,12 +63,32 @@
 </article>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-341/>
+【非真實地場】資料(342)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 升學原理(順境篇)&mldr;&mldr;
+&mldr;&mldr;
+順流則上
+逆流則下
+&mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 24, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-340/>
 【非真實地場】資料(340)
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 升學原理(困境&mldr;&mldr;
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 升學原理(逆境篇)&mldr;&mldr;
+&mldr;&mldr;
 逆流則上
 順流則下
 &mldr;&mldr;
@@ -174,20 +194,6 @@
 </div>
 <div class=post-footer>
 <time>November 23, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-332/>
-【非真實地場】資料(332)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 命中註水(命中注水)&ndash;命運裡就像注了水一樣。形容人對自己命運平庸的自嘲。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 21, 2021</time>
 <a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
 </div>
 </article>
