deploy: cee311992c589b7e8e2ff505751fca67d80a3e89

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= [歇前語]
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+[歇前語]
 休息前說的話。
 例如：&ldquo;寶貝心裡苦，寶貝要玩遊戲"中"寶貝心裡苦"為歇前語，表明即將休息(休息方法為玩遊戲)。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
@@ -68,7 +69,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 柳暗花暗&ndash;柳樹是暗的，花也是暗的。形容黑暗。
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+柳暗花暗&ndash;柳樹是暗的，花也是暗的。形容黑暗。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
@@ -83,7 +85,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= &mldr;&mldr;
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+&mldr;&mldr;
 好人要好好追
 &mldr;&mldr;要&mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
@@ -100,7 +103,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 升學原理(逆&mldr;&mldr;
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+升學原理(逆&mldr;&mldr;
 &mldr;&mldr;
 逆流則上
 順流則下
@@ -119,7 +123,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 升學原理(順境篇)&mldr;&mldr;
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+升學原理(順境篇)&mldr;&mldr;
 &mldr;&mldr;
 順流則上
 逆流則下
@@ -138,7 +143,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 難心壯志(难心壮志)&ndash;心裡很難，但是有宏偉的志願。形容稱王的決心。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+難心壯志(难心壮志)&ndash;心裡很難，但是有宏偉的志願。形容稱王的決心。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 23, 2021</time>
@@ -152,7 +158,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 勤學好回(勤学好回)&ndash;勤奮的學習，以便盡快回家。形容急於完成培訓的心情。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+勤學好回(勤学好回)&ndash;勤奮的學習，以便盡快回家。形容急於完成培訓的心情。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 23, 2021</time>
@@ -166,7 +173,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 三成不變(三成不变)&ndash;三成的可能不會變。形容事情在變化中。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+三成不變(三成不变)&ndash;三成的可能不會變。形容事情在變化中。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 23, 2021</time>
@@ -180,7 +188,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 國士無單(国士无单)&ndash;国家的人才没有单身的。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+國士無單(国士无单)&ndash;国家的人才没有单身的。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 23, 2021</time>
@@ -194,7 +203,8 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 今韭借比&ndash;今天我像韭菜一樣，想借您一個比喻。形容對創意的渴求。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+今韭借比&ndash;今天我像韭菜一樣，想借您一個比喻。形容對創意的渴求。 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
 <time>November 23, 2021</time>
