deploy: 7305651ddbe7d6d2fa2120707df68f3150127243

--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 </a>
 </h2>
 <div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*= 他把臉貼在書架上，想看看寫滿就義故事的是哪本書。
-「聖開頭的那個」她說。
-「就這麼簡單？」他說。
-「就這麼簡單」她說。
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+[走神理由速查手冊(初級)]
+&mldr;&mldr; 新知識點太多，學不動了&mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
