deploy: cc8e75f4e22d7a801b808f69bcac5132d10428b8

--- a/index.html
+++ b/index.html
@@ -46,6 +46,33 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-361/>
+【非真實地場】資料(361)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+「你知道這段單賣多少錢嗎？」S說。
+「就兩秒鐘？」他說。
+「恩」S說。
+「猜不出來」他說。 「說出來怕嚇 &mldr;&mldr; 「是剪出來的？」他說。 「當然」S說。
+「這。。這也太短了吧」他說。
+「不聽了是吧」S說。
+「不不。。要。要聽。。要聽」他說。
+「還是蠻識貨的，要不要。。要不要我再賞你一段試聽？」S說。
+「哎喲，快放吧，都老客戶了」他說。 &mldr;&mldr;
+「那就趕緊掃碼吧，這生意我可是要賠死嘍，哎，誰叫我是善良人呢，哈哈」S說。
+「看清楚，全320kbps。五段，每段兩秒」S說。
+&mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 26, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-360/>
 【非真實地場】資料(360)
 </a>
@@ -186,25 +213,6 @@
 「這邊好像味兒比較淡」甲說。
 「換地方」乙說。
 &mldr;&mldr;
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 26, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-351/>
-【非真實地場】資料(351)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「你要知道，你的這些所謂缺點都是優點」他說。
-「哎」她說。
-「反過來我不想說了」他說。
-「我知道」她說。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
