deploy: 71ee5722c57f0e4d144e13cfb4fd50247ff793a9

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-「這麼多人」F說。
+「這麼多人」C說。
 「剛開學，都這樣」S說。
-「不知道顯卡有沒有貨」F說。
+「不知道顯卡有沒有貨」C說。
 &mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
