deploy: 5c34335640a0cadb714ffb44fb28a8c5f18576e9

--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
 <div class=article-content>
 <article>
 <h2>
+<a href=https://blog.jinreal.com/posts/uf-material-362/>
+【非真實地場】資料(362)
+</a>
+</h2>
+<div>
+<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
+[走神理由編寫指南(中級)]
+&mldr;&mldr;
+女嘉賓聲音太苦，導致我心裡苦得難受
+男嘉賓聲音很甜，導致我心裡甜得難受 主持人穿的太少，導致我心裡冷得難受
+&mldr;&mldr;
+=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
+</div>
+<div class=post-footer>
+<time>November 27, 2021</time>
+<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
+</div>
+</article>
+<article>
+<h2>
 <a href=https://blog.jinreal.com/posts/uf-material-361/>
 【非真實地場】資料(361)
 </a>
@@ -193,26 +213,6 @@
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
 高築責台(高筑责台)&ndash;在很高的建築上指責站在台子上的人。
-=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
-</div>
-<div class=post-footer>
-<time>November 26, 2021</time>
-<a class=tag href=/tags/%E5%B0%8F%E8%AA%AA>#小說</a>
-</div>
-</article>
-<article>
-<h2>
-<a href=https://blog.jinreal.com/posts/uf-material-352/>
-【非真實地場】資料(352)
-</a>
-</h2>
-<div>
-<p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-&mldr;&mldr;
-「藏哪裡去了？」丙喊道。
-「這邊好像味兒比較淡」甲說。
-「換地方」乙說。
-&mldr;&mldr;
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
