deploy: 427d7cce8fdf62b4f2ed86ecd1efdad867c8d550

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-寸步雄行&ndash;做了偉大的事情，腳卻只動了一寸。形容神人。
+寸步雄行&ndash;做出偉大的行為，腳卻只動了一寸。形容神人。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
