deploy: 73b12c344b7d57fbe24fa116b83e931e38d1e486

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-無謝可擊(无谢可击)&ndash;他沒說謝謝，可以攻擊他。形容陰謀。
+美輪美換(美轮美换)&ndash;美國的齒輪，需要到美國換。形容原廠配件。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
