deploy: cbe3f6f69d4405f0d08925ff66e5f94e14fa491a

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </h2>
 <div>
 <p>=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=
-紅顏厚命(红颜厚命)&ndash;臉容易紅的命比較硬。
+紅顏厚命(红颜厚命)&ndash;臉容易紅的命比較厚實。
 =*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=*=</p>
 </div>
 <div class=post-footer>
